welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:5: error: not found: value <
  case speed<60 => return 0
            ^caughtSpeeding:6: error: not found: value &&
  case speed<=80 && speed>60  => return 1
                 ^caughtSpeeding:7: error: not found: value >
  case speed>81 => return 2
            ^caughtSpeeding:2: error: type mismatch;
 found   : Unit
 required: Int
	if (isBirthday==false)
        ^