welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
	if (isBirthday==false)
	{
		(speed) match {
  case speed<60 => return 0
  case speed<=80 && speed>60  => return 1
  case speed>81 => return 2
	};
	
}
}